WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241765
Fix implicit clears with clearBuffer commands
https://bugs.webkit.org/show_bug.cgi?id=241765
Summary
Fix implicit clears with clearBuffer commands
Alexey Knyazev
Reported
2022-06-19 15:06:15 PDT
* clearBufferfv should notify the canvas, otherwise it may get out of sync. * clearBufferfv and clearBufferfi should not cancel implicit clears of other buffers.
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2022-06-21 01:53:08 PDT
Committed
r295684
(
251689@main
): <
https://commits.webkit.org/251689@main
> Reviewed commits have been landed. Closing PR #1625 and removing active labels.
Radar WebKit Bug Importer
Comment 2
2022-06-21 01:54:13 PDT
<
rdar://problem/95579334
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug